--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Authentication</title>
+    <title>Auth App</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -17,7 +17,7 @@
         </ul>
       </nav>
     </header>
-    <h1>Authentication</h1>
+    <h1>Auth App</h1>
     <%- body %>
   </body>
 </html>
