--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
-nav ul li {
+/* nav ul li {
   text-decoration: none;
   display: inline-block;
   margin-right: .3em;
-}
-
-h1 {
-  color: chartreuse;
+} */
+body {
+  background-color: rgb(1, 1, 22);
+  color: rgb(224, 231, 235);
 }
