Add search route and render to detail page

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,5 @@
 <form action="/auth/signup" method="POST">
+  <h4>Sign Up</h4>
   <label for="new-email">Email</label>
   <input id="new-email" type="email" name="email">
 
@@ -8,5 +9,5 @@
   <label for="new-password">Password</label>
   <input id="new-password" type="password" name="password">
 
-  <input type="submit" value="Sign up">
+  <input type="submit" value="Create My Account">
 </form>
