--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,3 +7,19 @@ body {
   background-color: rgb(1, 1, 22);
   color: rgb(224, 231, 235);
 }
+
+.cover {
+  object-fit: cover;
+  width: 100%;
+  /* height: 600px; */
+}
+
+form{
+  background-color: rgb(226, 247, 248);
+  color: black;
+  width: 350px;
+  /* height: 400px; */
+  padding: 40px;
+  margin: 50px auto;
+  box-shadow: 0 0 1em rgb(179, 176, 176);
+}
