--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,13 @@
-<form action="/auth/login" method="POST">
-  <label for="auth-email">Email</label>
-  <input id="auth-email" type="email" name="email">
+<!-- <div class="form-box"> -->
+  <form action="/auth/login" method="POST">
+    <h4>Log In</h4>
+    <label for="auth-email">Email</label>
+    <input id="auth-email" type="email" name="email">
 
-  <label for="auth-password">Password</label>
-  <input id="auth-password" type="password" name="password">
+    <label for="auth-password">Password</label>
+    <input id="auth-password" type="password" name="password">
 
-  <input type="submit" value="Log In">
-</form>
+    <input class="" type="submit" value="Log In">
+  </form>
+<!-- </div> -->
+
