--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,19 +17,26 @@
     <% include partials/alerts %> 
 
     <header>
-      <nav class="#212121 grey darken-4">
-        <a href="/" class="brand-logo center">
-          <img src="https://img.icons8.com/color/48/000000/saturn-planet.png"/>
-          Astronomy Picture of Your Day</a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <% if (!currentUser) { %>
-          <li><a href="/auth/signup">Sign Up</a></li>
-          <li><a href="/auth/login">Login</a></li>
-        <% } else { %> 
-          <li><a href="/auth/logout">Logout</a></li>
-          <li><a href="/profile">Profile</a></li>
-        <% } %> 
-        </ul>
+      <nav class="grey darken-4">
+        <div class="nav-wrapper">
+          <a href="/" class="brand-logo center">
+            <img src="https://img.icons8.com/color/48/000000/saturn-planet.png"/>
+            Astronomy Picture of Your Day
+          </a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <% if (!currentUser) { %>
+            <li><a href="/auth/signup">Sign Up</a></li>
+            <li><a href="/auth/login">Login</a></li>
+          <% } else { %> 
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/auth/logout">Logout</a></li>
+          <% } %> 
+          </ul>
+          <ul class="left hide-on-med-and-down">
+            <li><a href="/search">Search</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
 
@@ -48,14 +55,16 @@
           </div>
         </div>
         <div class="col m4 s12 center">
+          <span>See Contributor At</span><br>
           <a href="https://github.com/margaret-jihua/Astronomy-App"><img src="https://img.icons8.com/bubbles/50/000000/github.png"/></a>
           <a href="https://www.linkedin.com/in/margaret-jihua/"><img src="https://img.icons8.com/bubbles/50/000000/linkedin.png"/></a>
         </div>
-        <div class="col m4 s12">
-          Thanks Lucas & Lily for emotional support!
+        <div class="col m4 s12 center">
           <img src="https://i.imgur.com/kbZa1Pz.png" alt="Lucas" height="48">
           <img src="https://i.imgur.com/XPvw1Nd.png" alt="Lily" height="48">
-          <a href="https://www.instagram.com/walklikeacat/"><img src="https://img.icons8.com/fluent/30/000000/instagram-new.png"/></a>
+          <a href="https://www.instagram.com/walklikeacat"><img src="https://i.imgur.com/WR0gpVk.png" height="48"></a>
+          <br> 
+          <span>Thanks Lucas & Lily for support!</span>
         </div>
       </div>
       <div class="footer-copyright">
