Add faves model and usersFaves relationship

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,5 +1,5 @@
 <!-- <div class="form-box"> -->
-  <form action="/auth/login" method="POST">
+  <form class="registration" action="/auth/login" method="POST">
     <h4>Log In</h4>
     <label for="auth-email">Email</label>
     <input id="auth-email" type="email" name="email">
