--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<form action="/auth/signup" method="POST">
+<form class="registration" action="/auth/signup" method="POST">
   <h4>Sign Up</h4>
   <label for="new-email">Email</label>
   <input id="new-email" type="email" name="email">
