--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ body {
   /* height: 600px; */
 }
 
-form{
+.registration {
   background-color: rgb(226, 247, 248);
   color: black;
   width: 350px;
