--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -2,10 +2,19 @@
     <div class="center">
         <h5><%= apod.title %></h5>
         <h5><%= apod.date %></h5>
+        <form method="POST" action="/profile">
+            <input hidden type="date" id="date" name="date" value="<%= apod.date %>">
+            <% if (apod.hdurl) { %>
+                <input hidden type="text" id="url" name="url" value="<%= apod.hdurl %>">
+            <% } else { %> 
+                <input hidden type="text" id="url" name="url" value="<%= apod.url %>">
+            <% } %> 
+            <button type="submit">Add to Favorite</button>
+        </form>
     </div>
     <div>
         <% if (apod.hdurl && apod.media_type === 'image') { %> 
-            <img class="cover" src="<%= apod.hdurl %>" alt="astronomy picture of today" height="600">
+            <img class="cover" src="<%= apod.hdurl %>" alt="<%= apod.date %> " height="600">
         <% } else if (apod.url && apod.media_type === 'video') { %> 
             <iframe class="cover" src="<%= apod.url %>" height="600"></iframe>
         <% } else { %> 
