--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,16 @@
-<h2>Profile Page</h2>
 
-<h3>Welcome to your PROFILE</h3>
+<h5>Welcome, <%= userName %> </h5>
+<div class="center">
+    <h4>My Gallery</h4>
+    <div class="row">
+        <% faves.forEach( f =>{ %>
+            <div class="col l3 s6">
+                <img class="cover" src="<%= f.url %>" alt="<%= f.date %>" height="200">
+                <span><%= f.date %> </span>
+            </div>
+        <%}) %> 
+    </div>
+</div>
+
+
+
