--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,4 @@
-<div class="">
-    <!-- <h4>Astronomry Pictures Search</h4> -->
-    <!-- <h6>Search any date after 1995-06-16</h6> -->
+<div class="registration">
     <form method="GET" action="/detail">
         <label for="date">Search any date after 1995-06-16</label>        
         <input type="date" name="date" id="date" min="1995-06-16" max="<%= date %> ">
