--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -12,16 +12,16 @@
             <button type="submit">Add to Favorite</button>
         </form>
     </div>
-    <div>
+    <div class="container center">
         <% if (apod.hdurl && apod.media_type === 'image') { %> 
-            <img class="cover" src="<%= apod.hdurl %>" alt="<%= apod.date %> " height="100%">
+            <img src="<%= apod.hdurl %>" alt="<%= apod.date %> ">
         <% } else if (apod.url && apod.media_type === 'video') { %> 
-            <iframe class="cover" src="<%= apod.url %>" height="100%"></iframe>
+            <iframe src="<%= apod.url %>"></iframe>
         <% } else { %> 
             <img src="https://http.cat/204" alt="Cannot Find Content">
         <% } %> 
     </div>
-    <div>
+    <div class="container">
         <% if(apod.copyright) { %> 
             <p class="center">Image credit & copyright: <%= apod.copyright %></p>
         <% } %> 
