--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,25 +6,35 @@
     <% } else { %> 
         <img src="https://http.cat/204" alt="Cannot Find Content">
     <% } %> 
+    <p><%= apod.date %></p>
+    <p><%= apod.title %></p>
+    <form method="GET" action="/detail">
+        <input hidden type="date" id="date" name="date" value="<%= apod.date %>">
+        <button type="submit">See More Information</button>
+    </form>
+    <form method="POST" action="/profile">
+        <input hidden type="date" id="date" name="date" value="<%= apod.date %>">
+        <% if (apod.hdurl) { %>
+            <input hidden type="text" id="url" name="url" value="<%= apod.hdurl %>">
+        <% } else { %> 
+            <input hidden type="text" id="url" name="url" value="<%= apod.url %>">
+        <% } %> 
+        <button type="submit">Add to Favorite</button>
+    </form>
 </div>
 
 <div class="row">
     <% gallery.forEach( g => { %>
         <div class="col m4 s6">
-            <div class="card">
-                <div class="card-image">
-                    <% if (g.hdurl && g.media_type === 'image') { %> 
-                        <img src="<%= g.url %>" alt="<%= g.date %>>
-                    <% } else if (g.url && g.media_type === 'video') { %> 
-                        <iframe src="<%= g.url %>"></iframe>
-                    <% } else { %> 
-                        <img src="https://http.cat/204" alt="Cannot Find Content">
-                    <% } %> 
-                </div>
-                <div class="grey darken-4">
-                    <%= g.title %>
-                </div>
-            </div>
+            <% if (g.url && g.media_type === 'image') { %> 
+                <img class="cover" src="<%= g.url %>" alt="<%= g.date %>" height="300">
+            <% } else if (g.url && g.media_type === 'video') { %> 
+                <iframe class="cover" src="<%= g.url %>" height="300"></iframe>
+            <% } else { %> 
+                <img class="cover" src="https://http.cat/204" alt="Cannot Find Content" height="300">
+            <% } %>
+            <p><%= g.date %></p>
+            <p><%= g.title %></p>
         </div>
     <% }) %> 
 </div>
