--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -14,11 +14,11 @@
     </div>
     <div class="container center">
         <% if (apod.hdurl && apod.media_type === 'image') { %> 
-            <img src="<%= apod.hdurl %>" alt="<%= apod.date %> ">
+            <img class="cover" src="<%= apod.hdurl %>" alt="<%= apod.date %> ">
         <% } else if (apod.url && apod.media_type === 'video') { %> 
-            <iframe src="<%= apod.url %>"></iframe>
+            <iframe class="cover" src="<%= apod.url %>"></iframe>
         <% } else { %> 
-            <img src="https://http.cat/204" alt="Cannot Find Content">
+            <img class="cover" src="https://http.cat/204" alt="Cannot Find Content">
         <% } %> 
     </div>
     <div class="container">
