fix typo, add view page for pictures saved in profile

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -16,7 +16,7 @@
         <% if (apod.hdurl && apod.media_type === 'image') { %> 
             <img class="cover" src="<%= apod.hdurl %>" alt="<%= apod.date %> ">
         <% } else if (apod.url && apod.media_type === 'video') { %> 
-            <iframe class="cover" src="<%= apod.url %>"></iframe>
+            <iframe class="cover" src="<%= apod.url %>" height="600"></iframe>
         <% } else { %> 
             <img class="cover" src="https://http.cat/204" alt="Cannot Find Content">
         <% } %> 
