--- a/views/profile/show.ejs
+++ b/views/profile/show.ejs
@@ -1,9 +1,16 @@
 <div class="container center">
     
-    <iframe class="cover" src="<%= fave.url %>"></iframe>
-    
+    <p><%= fave.date %></p>
+
     <form method="GET" action="/detail">
         <input hidden type="date" id="date" name="date" value="<%= fave.date %>">
         <button type="submit">See Detail</button>
     </form>
+    
+    <% if (fave.url.substring(8,11) === 'www') { %> 
+        <iframe class="cover" src="<%= fave.url %>" height="600"></iframe>
+    <% } else { %> 
+        <img class="cover" src="<%= fave.url %>" alt="<%= fave.date %>">
+    <% } %> 
+
 </div>
