--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,7 +1,9 @@
-<div class="registration">
-    <form method="GET" action="/detail">
-        <label for="date">Search any date after 1995-06-16</label>        
-        <input type="date" name="date" id="date" min="1995-06-16" max="<%= date %> ">
-        <input type="submit">
-    </form>
+<div class="search-background">
+    <div class="registration">
+        <form method="GET" action="/detail">
+            <label for="date">Search any date after 1995-06-16</label>        
+            <input type="date" name="date" id="date" min="1995-06-16" max="<%= date %> ">
+            <button class="search-btn" type="submit">Search</button>
+        </form>
+    </div>
 </div>
