--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,25 +1,81 @@
-/* nav ul li {
-  text-decoration: none;
-  display: inline-block;
-  margin-right: .3em;
-} */
+
 body {
   background-color: rgb(1, 1, 22);
   color: rgb(224, 231, 235);
 }
 
+label {
+  color: rgb(66, 66, 82);
+}
+
+nav {
+  padding-bottom: 70px;
+}
+
+footer {
+  padding-top: 50px;
+}
+
+/* .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+} */
+
 .cover {
   object-fit: cover;
   width: 100%;
-  /* height: 600px; */
 }
 
 .registration {
-  background-color: rgb(226, 247, 248);
+  background-color: rgb(179, 217, 219, 0.8);
   color: black;
   width: 350px;
-  /* height: 400px; */
   padding: 40px;
-  margin: 50px auto;
+  position: relative;
+  top: 160px;
+  margin: auto;
   box-shadow: 0 0 1em rgb(179, 176, 176);
 }
+
+.search-background {
+  height: 600px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://i.imgur.com/XuETSW8.jpg');
+}
+
+.search-btn {
+  box-shadow: none;
+  border: none;
+  padding: 10px;
+  margin-top: 12px;
+  width: 100%;
+  background-color: rgb(118, 164, 250);
+}
+
+.search-btn:hover {
+  background-color: rgb(81, 132, 241);
+}
+
+@media (max-width: 900px) {
+  .nav-wrapper .brand-logo {
+    font-size: 20px;
+  }
+
+  .nav-wrapper .brand-logo img {
+    height: 22px;
+  }
+}
+  
+@media (max-width: 601px) {
+  nav {
+    line-height: inherit;
+  }
+}  
