--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 
 <div class="row">
     <% gallery.forEach( g => { %>
-        <div class="col m4 s6">
+        <div class="col l4 m6 s12">
             <% if (g.url && g.media_type === 'image') { %> 
                 <img class="cover" src="<%= g.url %>" alt="<%= g.date %>" height="300">
             <% } else if (g.url && g.media_type === 'video') { %> 
