--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -11,7 +11,7 @@
             <div>
                 <p><%= g.date %></p>
                 <p><%= g.title %></p>
-                <form method="GET" action="/detail">
+                <form class="gallery-btn" method="GET" action="/detail">
                     <input hidden type="date" id="date" name="date" value="<%= g.date %>">
                     <button type="submit">See More Information</button>
                 </form>
