--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
             <% } %>
             <p><%= g.date %></p>
             <p><%= g.title %></p>
-            <form method="GET" action="/detail">
+            <form class="gallery-btn" method="GET" action="/detail">
                 <input hidden type="date" id="date" name="date" value="<%= g.date %>">
                 <button type="submit">See More Information</button>
             </form>
