--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,7 +79,7 @@ button:focus {
   padding: 5px;
   margin: 0 auto 20px;
   width: 85%;
-  background-color: rgb(24, 83, 192);
+  background-color: rgb(18, 64, 150, 0.6);
   box-shadow: 0 2px 10px rgba(111, 111, 111, 0.5);
   border-radius: 4px;
 }
@@ -91,6 +91,22 @@ button:focus {
 
 .gallery-btn button {
   color: white;
+}
+
+/* --------------Detail Page-------------- */
+
+.fave-btn{
+  color: white;
+  padding: 7px;
+  margin: 7px auto 20px;
+  width: 200px;
+  background-color: rgba(252, 52, 52, 0.6);
+  box-shadow: 0 2px 10px rgba(140, 140, 140, 0.5);
+}
+
+.fave-btn:hover {
+  background-color: rgb(252, 52, 52, 0.8);
+  box-shadow: 1px 6px 15px rgba(140, 140, 140, 0.5);
 }
 
 /* --------------Profile-------------- */
