--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -91,7 +91,9 @@
       document.addEventListener('DOMContentLoaded', function() {
         var elems = document.querySelectorAll('.sidenav');
         var instances = M.Sidenav.init(elems, {});
+        var instance = M.Tabs.init(el, options);
       });
+      M.AutoInit();
     </script>
   </body>
 </html>
