--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -89,11 +89,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.sidenav');
-        var instances = M.Sidenav.init(elems, {});
-        var instance = M.Tabs.init(el, options);
+        // var elems = document.querySelectorAll('.sidenav');
+        // var instances = M.Sidenav.init(elems, {});
+        // var instance = M.Tabs.init(el, options);
+        // var elems = document.querySelectorAll('.slider');
+        // var instances = M.Slider.init(elems, options);
+        M.AutoInit();
       });
-      M.AutoInit();
     </script>
   </body>
 </html>
