--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,10 +4,6 @@ body {
   color: rgb(224, 231, 235);
 }
 
-label {
-  color: rgb(66, 66, 82);
-}
-
 nav {
   padding-bottom: 70px;
 }
@@ -16,14 +12,8 @@ footer {
   padding-top: 50px;
 }
 
-button {
-  box-shadow: none;
-  border: none;
-  background: none;
-}
-
-button:focus {
-  background: none;
+.input-field label {
+  color: rgb(80, 80, 80);
 }
 
 .cover {
@@ -42,7 +32,22 @@ button:focus {
   box-shadow: 0 0 1em rgb(179, 176, 176);
 }
 
+/* --------------Auth Page-------------- */
+
+.auth-background {
+  height: 700px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://i.imgur.com/j3HNVfH.jpg');
+}
+
+.auth-btn {
+  margin-top: 20px;
+  width: 100%;
+}
+
 /* --------------Search Page-------------- */
+
 .search-background {
   height: 700px;
   background-repeat: no-repeat;
@@ -50,63 +55,62 @@ button:focus {
   background-image: url('https://i.imgur.com/XuETSW8.jpg');
 }
 
-.search-btn {
-  padding: 10px;
-  margin-top: 12px;
-  width: 100%;
-  background-color: rgb(118, 164, 250);
+.search-background label {
+  color: rgb(80, 80, 80);
 }
 
-.search-btn:hover {
-  background-color: rgb(81, 132, 241);
+.search-btn {
+  margin-top: 12px;
+  width: 100%;
 }
 
 /* --------------Gallery Page-------------- */
 
 .gallery-btn {
-  padding: 5px;
-  margin: 0 auto 20px;
+  margin: 0 auto 30px;
   width: 85%;
-  background-color: rgb(18, 64, 150, 0.6);
-  box-shadow: 0 2px 10px rgba(111, 111, 111, 0.5);
-  border-radius: 4px;
-}
-
-.gallery-btn:hover {
-  background-color: rgb(82, 121, 228);
-  box-shadow: 1px 6px 15px rgba(111, 111, 111, 0.5);
-}
-
-.gallery-btn button {
-  color: white;
+  color: black;
+  box-shadow: 0 0 1rem lightgrey;
 }
 
 /* --------------Detail Page-------------- */
 
 .fave-btn{
-  color: white;
-  padding: 7px;
-  margin: 7px auto 20px;
-  width: 200px;
-  background-color: rgba(252, 52, 52, 0.6);
-  box-shadow: 0 2px 10px rgba(140, 140, 140, 0.5);
+  margin: 12px auto;
+  width: 260px;
+  color: black;
+  box-shadow: 0 0 1rem pink;
 }
 
-.fave-btn:hover {
-  background-color: rgb(252, 52, 52, 0.8);
-  box-shadow: 1px 6px 15px rgba(140, 140, 140, 0.5);
+.explanation {
+  margin: 45px 0;
+  line-height: 1.8rem;
 }
 
 .comment-box {
-  padding: 10px;
-  background-color: rgba(37, 50, 124, 0.6);
+  margin-top: 20px;
+  background-color: rgb(6, 6, 36);
+  box-shadow: 0 0 2rem grey;
 }
 
-.comment-box input{
+.comment-item {
+   border-bottom: 1px solid grey;
+   padding: 18px;
+}
+
+.add-comment input{
   color: white;
+  /* background-color: cornflowerblue;
+  border-radius: 50px; */
+}
+
+.comment-btn {
+  color: black;
+  width: 200px;
 }
 
 /* --------------Profile-------------- */
+
 .flex {
   display: flex;
   justify-content: space-between;
