--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,10 +1,13 @@
 <div class="container">
+
     <div class="row" style="margin-top: 20px;">
+
         <div class="col s4">
-            <a class="left btn-floating btn-large blue-grey" href="#comment">
+            <a class="left btn-floating btn-large blue-grey lighten-1" href="#comment">
                 <i class="material-icons">comment</i>
             </a>
         </div>
+        
         <div class="col s4">
             <form class="center" method="POST" action="/profile">
                 <input hidden type="date" id="date" name="date" value="<%= apod.date %>">
@@ -13,14 +16,18 @@
                 <% } else { %> 
                     <input hidden type="text" id="url" name="url" value="<%= apod.url %>">
                 <% } %> 
-                <button class="fave-btn" type="submit">Add to Favorite</button>
+                <button class="fave-btn btn waves-effect waves-light red lighten-2" type="submit">Add to Favorite</button>
             </form>
         </div>
+
         <div class="col s4">
-            <h5 class="right"><%= apod.date %></h5>
+            <h5 id="apod-date" class="right"><%= apod.date %></h5>
         </div>
-        <div class="col s12 center">
-            <h5><%= apod.title %></h5>
+
+        <div class="col s12 center" style="font-size: 2rem;">
+            <a id="arrow-back" class="btn-floating btn-large N/A transparent" href=""><i class=" material-icons">arrow_back</i></a>
+            <span ><%= apod.title %></span>
+            <a id="arrow-forward" class="btn-floating btn-large N/A transparent" href=""><i class="material-icons">arrow_forward</i></a>
         </div>
     </div>
     
@@ -34,28 +41,37 @@
         <% } %> 
     </div>
 
-    <div class="">
+    <div class="explanation">
         <% if(apod.copyright) { %> 
             <p class="center">Image credit & copyright: <%= apod.copyright %></p>
         <% } %> 
-        <p>Explanation: <%= apod.explanation %></p>
+        <p>🔸 🔸 🔸 🔸  <%= apod.explanation %></p>
     </div>
 
-    <div id="comment" class="comment-box">
-        <h6>Comments: </h6>
+    <h6>Comments: </h6>
+
+    <div id="comment" class="comment-box">        
         <% if (comments.length) { %> 
             <% comments.forEach( c => { %>
-                <p><%= c.user.name %>: <%= c.content %></p>
-                <hr>
+                <div class="comment-item">
+                    <label><%= c.user.name %>: </label>
+                    <p><%= c.content %></p>
+                </div>
             <% }) %>
         <% } else { %> 
-        <div class="comment-item">
-            <i style="color: grey;">No comments yet. Leave a comment! >>>> </i>
+            <div class="comment-item">
+                <p><i style="color: grey;">No comments yet. Leave a comment! >>>> </i></p>
+            </div>
+        <% } %> 
+
+        <div class="add-comment">
+            <form method="POST" action="/detail?date=<%= apod.date %>#comment">
+                <div class="input-field">
+                    <label for="new-comment">Add a comment...</label>
+                    <input type="text" id="new-comment" name="comment" required>
+                </div>
+                <button class="comment-btn btn waves-effect waves-light brown lighten-4" type="submit">SUBMIT</button>
+            </form>
         </div>
-    <% } %> 
-        <form method="POST" action="/detail?date=<%= apod.date %>#comment">
-            <input type="text" name="comment" placeholder="Add a comment..." required>
-            <input type="submit">
-        </form>
     </div>
 </div>
