--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,7 @@
 <div class="row">
     <% gallery.forEach( g => { %>
         <div class="col l4 m6 s12">
+
             <% if (g.url && g.media_type === 'image') { %> 
                 <img class="cover" src="<%= g.url %>" alt="<%= g.date %>" height="300">
             <% } else if (g.url && g.media_type === 'video') { %> 
@@ -33,12 +34,16 @@
             <% } else { %> 
                 <img class="cover" src="https://http.cat/204" alt="Cannot Find Content" height="300">
             <% } %>
-            <p><%= g.date %></p>
-            <p><%= g.title %></p>
-            <form class="gallery-btn" method="GET" action="/detail">
-                <input hidden type="date" id="date" name="date" value="<%= g.date %>">
-                <button type="submit">See More Information</button>
-            </form>
+
+            <div class="center">
+                <p><%= g.date %></p>
+                <p><%= g.title %></p>
+                <form method="GET" action="/detail">
+                    <input hidden type="date" id="date" name="date" value="<%= g.date %>">
+                    <button class="gallery-btn btn waves-effect waves-light brown lighten-3" type="submit">See More Information</button>
+                </form>
+            </div>
+
         </div>
     <% }) %> 
 </div>
