--- a/views/search.ejs
+++ b/views/search.ejs
@@ -3,7 +3,7 @@
         <form method="GET" action="/detail">
             <label for="date">Search any date after 1995-06-16</label>        
             <input type="date" name="date" id="date" min="1995-06-16" max="<%= date %> ">
-            <button class="search-btn" type="submit">Search</button>
+            <button class="search-btn btn waves-effect waves-light blue lighten-2" type="submit">Search</button>
         </form>
     </div>
 </div>
