Style profile page

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -18,5 +18,10 @@
             </div>
             
         </div>
-    <% }) %> 
+    <% }) %>   
+</div>
+
+ <div class="gallery-bottom">
+    <a href="#top"><h5>Back To Top</h5></a>
+    <a href="/gallery"><h5>Reload Gallery Photos</h5></a>
 </div>
