--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,6 +73,12 @@ footer {
   box-shadow: 0 0 1rem lightgrey;
 }
 
+.gallery-bottom {
+  display: flex;
+  justify-content: space-evenly;
+  text-shadow: 1px 1px lightgrey;
+}
+
 /* --------------Detail Page-------------- */
 
 .fave-btn{
@@ -111,15 +117,21 @@ footer {
 
 /* --------------Profile-------------- */
 
-.flex {
+.flex-button {
+  margin-bottom: 30px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .profile-btn {
-  margin: 0 20px 10px;
-  display: inline-grid;
-  background-color: rgb(170, 199, 175);
+  width: 100px;
+  box-shadow: 0 0 1em grey;
+}
+
+.my-comment-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
 }
 
 @media (max-width: 900px) {
