--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
     <% include partials/alerts %> 
 
     <header>
-      <nav class="grey darken-4">
+      <nav id="top" class="grey darken-4">
         <div class="nav-wrapper">
           <a href="/" class="brand-logo center">
             <img src="https://img.icons8.com/color/48/000000/saturn-planet.png"/>
